--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,4 @@
 {
-    "name": "intelogie/codemirror",
-    "description": "Code Mirror package"
+    "name": "intelogie/highlight",
+    "description": "Highlight.js package"
 }
